kuber/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: http-responces
  name: http-responces
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-responces
  type: ClusterIP
status:
  loadBalancer: {}
